tests/integration/snapshots/integration__document_symbol__float_flat.snap
---
source: tests/integration/document_symbol.rs
expression: server.find_document_symbols(uri)?

---
[
  {
    "name": "Figure 1: Foo",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 7,
          "character": 12
        }
      }
    }
  },
  {
    "name": "Figure: Bar",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 9,
          "character": 0
        },
        "end": {
          "line": 12,
          "character": 12
        }
      }
    }
  },
  {
    "name": "Figure: Baz",
    "kind": 6,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 14,
          "character": 0
        },
        "end": {
          "line": 17,
          "character": 12
        }
      }
    }
  }
]
