tests/integration/snapshots/integration__document_symbol__theorem_nested.snap
---
source: tests/integration/document_symbol.rs
expression: server.find_document_symbols(uri)?

---
[
  {
    "name": "Lemma 1 (Foo)",
    "detail": "thm:foo",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 6,
        "character": 0
      },
      "end": {
        "line": 8,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 18
      },
      "end": {
        "line": 6,
        "character": 33
      }
    },
    "children": []
  },
  {
    "name": "Lemma 2",
    "detail": "thm:bar",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 10,
        "character": 0
      },
      "end": {
        "line": 12,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 10,
        "character": 13
      },
      "end": {
        "line": 10,
        "character": 28
      }
    },
    "children": []
  },
  {
    "name": "Lemma",
    "detail": "thm:baz",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 16,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 14,
        "character": 13
      },
      "end": {
        "line": 14,
        "character": 28
      }
    },
    "children": []
  },
  {
    "name": "Lemma (Qux)",
    "kind": 13,
    "deprecated": false,
    "range": {
      "start": {
        "line": 18,
        "character": 0
      },
      "end": {
        "line": 20,
        "character": 11
      }
    },
    "selectionRange": {
      "start": {
        "line": 18,
        "character": 0
      },
      "end": {
        "line": 20,
        "character": 11
      }
    },
    "children": []
  }
]
